@@ -1,12 +1,30 @@
 {
-  "timestamp" : "2025-08-15T01:04:25Z",
+  "timestamp" : "2025-08-22T00:59:32Z",
   "count_outdated" : 106,
   "uniques_outdated" : 88,
-  "count" : 107,
-  "uniques" : 89,
+  "count" : 109,
+  "uniques" : 91,
   "clones" : [
     {
       "timestamp": "2025-08-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
