@@ -1,9 +1,19 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 3,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2025-08-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
